--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.25/jspdf.plugin.autotable.min.js"></script>
   <script>
-    const SUPABASE_URL = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imx4aXlhb2xid2poZGJ0a3Vzd3l2Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDcxNDQ5MDgsImV4cCI6MjA2MjcyMDkwOH0.OlS6Ow_v-_D_n7x2dI9Hq9q9deK5DGYwdMbfzNJtVjE';
-    const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imx4aXlhb2xid2poZGJ0a3Vzd3l2Iiwicm9sZSI6InNlcnZpY2Vfcm9sZSIsImlhdCI6MTc0NzE0NDkwOCwiZXhwIjoyMDYyNzIwOTA4fQ.uqnt8agqowmNWL4lZ-OC1vJh1j4WemwI-UAt077NwIg';
+    const SUPABASE_URL = 'https://SEU_PROJETO.supabase.co';
+    const SUPABASE_ANON_KEY = 'SUA_CHAVE_PUBLICA_ANON';
     const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
     const fazendas = {
