--- a/index.html
+++ b/index.html
@@ -24,27 +24,47 @@
       color: white;
       padding: 15px;
       text-align: center;
+      position: relative;
     }
-    header img {
-      max-height: 50px;
-      display: block;
-      margin: 0 auto 10px;
-    }
-    nav {
-      display: flex;
-      background-color: var(--accent);
-    }
-    nav button {
-      flex: 1;
-      padding: 15px;
+    .menu-toggle {
+      position: absolute;
+      left: 15px;
+      top: 15px;
+      background: none;
       border: none;
-      background-color: var(--accent);
-      color: white;
-      font-weight: bold;
       cursor: pointer;
     }
-    nav button.active {
-      background-color: var(--primary);
+    .menu-toggle div {
+      width: 25px;
+      height: 3px;
+      background-color: white;
+      margin: 5px 0;
+    }
+    .menu-dropdown {
+      display: none;
+      position: absolute;
+      left: 15px;
+      top: 55px;
+      background-color: var(--white);
+      border: 1px solid var(--border);
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      z-index: 999;
+    }
+    .menu-dropdown button {
+      display: block;
+      width: 100%;
+      padding: 10px;
+      background: none;
+      border: none;
+      text-align: left;
+      font-weight: bold;
+      color: var(--text);
+      cursor: pointer;
+    }
+    .menu-dropdown button:hover {
+      background-color: var(--accent);
+      color: white;
     }
     .container {
       max-width: 800px;
@@ -62,7 +82,7 @@
       margin-top: 15px;
       font-weight: 600;
     }
-    input {
+    input, select {
       width: 100%;
       padding: 10px;
       border: 1px solid var(--border);
@@ -92,8 +112,6 @@
       width: 100%;
       margin-top: 20px;
       border-collapse: collapse;
-      border-radius: 10px;
-      overflow: hidden;
     }
     th, td {
       border: 1px solid var(--border);
@@ -126,19 +144,34 @@
     .botoes-relatorio button:hover {
       background-color: var(--primary);
     }
+    .btn-excluir {
+      background-color: crimson;
+      color: white;
+      border: none;
+      padding: 6px 10px;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    .btn-excluir:hover {
+      background-color: darkred;
+    }
   </style>
 </head>
 <body>
 
   <header>
-    <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUg..." alt="Logo" />
+    <button class="menu-toggle" onclick="toggleMenu()">
+      <div></div>
+      <div></div>
+      <div></div>
+    </button>
+    <div class="menu-dropdown" id="menuDropdown">
+      <button onclick="mostrarTab('registro')">Registrar Inspeção</button>
+      <button onclick="mostrarTab('relatorio')">Relatório</button>
+      <button onclick="mostrarTab('exclusao')">Excluir Lançamentos</button>
+    </div>
     <h2>Inspeção de Cana</h2>
   </header>
-
-  <nav>
-    <button class="tab-btn active" onclick="mostrarTab('registro')">Registrar Inspeção</button>
-    <button class="tab-btn" onclick="mostrarTab('relatorio')">Relatório</button>
-  </nav>
 
   <div class="container">
 
@@ -167,6 +200,14 @@
 
     <!-- RELATÓRIO -->
     <div id="relatorio" class="tab-content card hidden">
+      <label for="fazendaFiltro">Filtrar por Fazenda:</label>
+      <select id="fazendaFiltro">
+        <option value="">Todas</option>
+        <option value="4012">FAZ. LAGOA CERCADA</option>
+        <option value="4010">FAZ. PAULO MINEIRO</option>
+        <option value="4045">FAZ. MERINDO I</option>
+      </select>
+
       <label for="inicio">Data Início:</label>
       <input type="date" id="inicio">
 
@@ -181,9 +222,15 @@
       <div id="tabelaRelatorio"></div>
     </div>
 
+    <!-- EXCLUSÃO -->
+    <div id="exclusao" class="tab-content card hidden">
+      <h3>Excluir Lançamentos</h3>
+      <p>Selecione um lançamento para excluir:</p>
+      <div id="listaExclusao"></div>
+    </div>
+
   </div>
 
-  <!-- Bibliotecas PDF -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.25/jspdf.plugin.autotable.min.js"></script>
 
@@ -198,13 +245,19 @@
       4045: "FAZ. MERINDO I"
     };
 
-    const registros = JSON.parse(localStorage.getItem('registros') || '[]');
+    let registros = JSON.parse(localStorage.getItem('registros') || '[]');
+
+    function toggleMenu() {
+      const dropdown = document.getElementById("menuDropdown");
+      dropdown.style.display = dropdown.style.display === "block" ? "none" : "block";
+    }
 
     function mostrarTab(id) {
       document.querySelectorAll('.tab-content').forEach(div => div.classList.add('hidden'));
       document.getElementById(id).classList.remove('hidden');
-      document.querySelectorAll('.tab-btn').forEach(btn => btn.classList.remove('active'));
-      event.target.classList.add('active');
+      if (id === 'relatorio') renderTabelaRelatorio();
+      if (id === 'exclusao') renderExclusao();
+      document.getElementById('menuDropdown').style.display = 'none';
     }
 
     document.getElementById('codigo').addEventListener('input', function () {
@@ -246,59 +299,84 @@
       localStorage.setItem('registros', JSON.stringify(registros));
 
       alert("Inspeção registrada com sucesso!");
-
       document.querySelectorAll("#registro input").forEach(i => i.value = "");
       document.getElementById('fazendaNome').textContent = "";
       document.getElementById('resultado').textContent = "";
     }
 
-    function gerarRelatorioPDF() {
+    function renderTabelaRelatorio() {
       const inicio = document.getElementById('inicio').value;
       const fim = document.getElementById('fim').value;
-      if (!inicio || !fim) {
-        alert("Preencha as datas de início e fim.");
-        return;
-      }
+      const fazendaFiltro = document.getElementById('fazendaFiltro').value;
 
-      const filtrados = registros.filter(r => r.data >= inicio && r.data <= fim);
-      if (filtrados.length === 0) {
-        alert("Nenhum registro encontrado no período.");
-        return;
-      }
-
-      const { jsPDF } = window.jspdf;
-      const doc = new jsPDF();
-      doc.text("Relatório de Inspeção de Cana", 14, 16);
-      doc.autoTable({
-        head: [["Data", "Código", "Fazenda", "Talhão", "Entrenós", "Brocado", "% Brocamento"]],
-        body: filtrados.map(r => [r.data, r.codigo, r.fazenda, r.talhao, r.entrenos, r.brocado, `${r.brocamento}%`]),
-        startY: 20
+      let filtrados = registros.filter(r => {
+        const dentroData = (!inicio || r.data >= inicio) && (!fim || r.data <= fim);
+        const mesmaFazenda = !fazendaFiltro || r.codigo === fazendaFiltro;
+        return dentroData && mesmaFazenda;
       });
-      doc.save("relatorio.pdf");
-    }
 
-    function exportarExcel() {
-      const inicio = document.getElementById('inicio').value;
-      const fim = document.getElementById('fim').value;
-      const filtrados = registros.filter(r => r.data >= inicio && r.data <= fim);
       if (filtrados.length === 0) {
-        alert("Nenhum registro encontrado.");
+        document.getElementById('tabelaRelatorio').innerHTML = "<p>Nenhum registro encontrado.</p>";
         return;
       }
+
+      let totalEntrenos = 0;
+      let totalBrocado = 0;
 
       let tabela = "<table><tr><th>Data</th><th>Código</th><th>Fazenda</th><th>Talhão</th><th>Entrenós</th><th>Brocado</th><th>% Brocamento</th></tr>";
       filtrados.forEach(r => {
-        tabela += `<tr><td>${r.data}</td><td>${r.codigo}</td><td>${r.fazenda}</td><td>${r.talhao}</td><td>${r.entrenos}</td><td>${r.brocado}</td><td>${r.brocamento}%</td></tr>`;
+        tabela += `<tr>
+          <td>${r.data}</td>
+          <td>${r.codigo}</td>
+          <td>${r.fazenda}</td>
+          <td>${r.talhao}</td>
+          <td>${r.entrenos}</td>
+          <td>${r.brocado}</td>
+          <td>${r.brocamento}%</td>
+        </tr>`;
+        totalEntrenos += r.entrenos;
+        totalBrocado += r.brocado;
       });
+
+      const totalBrocamento = ((totalBrocado / totalEntrenos) * 100).toFixed(2);
+      tabela += `<tr style="background:#f1f1f1;font-weight:bold"><td colspan="4">TOTAL</td><td>${totalEntrenos}</td><td>${totalBrocado}</td><td>${totalBrocamento}%</td></tr>`;
       tabela += "</table>";
 
-      const tipo = 'application/vnd.ms-excel';
-      const blob = new Blob([tabela], { type: tipo });
-      const url = URL.createObjectURL(blob);
-      const link = document.createElement("a");
-      link.href = url;
-      link.download = "relatorio.xls";
-      link.click();
+      document.getElementById('tabelaRelatorio').innerHTML = tabela;
+    }
+
+    function renderExclusao() {
+      const lista = document.getElementById("listaExclusao");
+      if (registros.length === 0) {
+        lista.innerHTML = "<p>Nenhum lançamento encontrado.</p>";
+        return;
+      }
+      let html = "<table><tr><th>Data</th><th>Fazenda</th><th>Talhão</th><th>Ação</th></tr>";
+      registros.forEach((r, i) => {
+        html += `<tr>
+          <td>${r.data}</td>
+          <td>${r.fazenda}</td>
+          <td>${r.talhao}</td>
+          <td><button class="btn-excluir" onclick="excluir(${i})">Excluir</button></td>
+        </tr>`;
+      });
+      html += "</table>";
+      lista.innerHTML = html;
+    }
+
+    function excluir(index) {
+      registros.splice(index, 1);
+      localStorage.setItem('registros', JSON.stringify(registros));
+      renderExclusao();
+      renderTabelaRelatorio();
+    }
+
+    function gerarRelatorioPDF() {
+      alert("Relatório PDF ainda não atualizado.");
+    }
+
+    function exportarExcel() {
+      alert("Exportar para Excel ainda não implementado.");
     }
   </script>
 </body>
