--- a/index.html
+++ b/index.html
@@ -318,18 +318,66 @@
       const { jsPDF } = window.jspdf;
       const doc = new jsPDF();
       const colunas = ["Data", "Fazenda", "Talhão", "Entrenós", "Brocado", "Brocamento (%)"];
-      const linhas = registros.map(r => [r.data, r.fazenda, r.talhao, r.entrenos, r.brocado, r.brocamento]);
+
+      const filtroFazenda = document.getElementById('fazendaFiltro').value;
+      const inicio = document.getElementById('inicio').value;
+      const fim = document.getElementById('fim').value;
+
+      const dadosFiltrados = registros.filter(r => {
+        const dataValida = (!inicio || r.data >= inicio) && (!fim || r.data <= fim);
+        const fazendaValida = !filtroFazenda || r.codigo === filtroFazenda;
+        return dataValida && fazendaValida;
+      });
+
+      let totalEntrenos = 0;
+      let totalBrocado = 0;
+
+      const linhas = dadosFiltrados.map(r => {
+        totalEntrenos += r.entrenos;
+        totalBrocado += r.brocado;
+        return [r.data, r.fazenda, r.talhao, r.entrenos, r.brocado, r.brocamento];
+      });
+
+      const brocamentoTotal = totalEntrenos > 0 ? ((totalBrocado / totalEntrenos) * 100).toFixed(2) : "0.00";
+      linhas.push(["", "TOTAL", "", totalEntrenos, totalBrocado, brocamentoTotal]);
+
       doc.text("Relatório de Inspeção de Cana", 14, 16);
-      doc.autoTable({ startY: 20, head: [colunas], body: linhas });
+      doc.autoTable({
+        startY: 20,
+        head: [colunas],
+        body: linhas,
+        styles: { fontSize: 10 },
+        footStyles: { fontStyle: 'bold' }
+      });
+
       doc.save("relatorio-inspecao.pdf");
     }
 
     // Excel (CSV)
     function exportarExcel() {
-      let csv = "Data,Fazenda,Talhão,Entrenós,Brocado,Brocamento (%)\n";
-      registros.forEach(r => {
-        csv += `${r.data},${r.fazenda},${r.talhao},${r.entrenos},${r.brocado},${r.brocamento}\n`;
+      const filtroFazenda = document.getElementById('fazendaFiltro').value;
+      const inicio = document.getElementById('inicio').value;
+      const fim = document.getElementById('fim').value;
+
+      const dadosFiltrados = registros.filter(r => {
+        const dataValida = (!inicio || r.data >= inicio) && (!fim || r.data <= fim);
+        const fazendaValida = !filtroFazenda || r.codigo === filtroFazenda;
+        return dataValida && fazendaValida;
       });
+
+      let totalEntrenos = 0;
+      let totalBrocado = 0;
+
+      let csv = "Data,Fazenda,Talhão,Entrenós,Brocado,Brocamento (%)\n";
+      dadosFiltrados.forEach(r => {
+        csv += `${r.data},${r.fazenda},${r.talhao},${r.entrenos},${r.brocado},${r.brocamento}\n`;
+        totalEntrenos += r.entrenos;
+        totalBrocado += r.brocado;
+      });
+
+      const brocamentoTotal = totalEntrenos > 0 ? ((totalBrocado / totalEntrenos) * 100).toFixed(2) : "0.00";
+      csv += `,,TOTAL,${totalEntrenos},${totalBrocado},${brocamentoTotal}\n`;
+
       const blob = new Blob([csv], { type: "text/csv;charset=utf-8;" });
       const link = document.createElement("a");
       link.href = URL.createObjectURL(blob);
